<resources>

    <string name="app_name">@string/app_name</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="pref_search_range_summary">Set the range of search for incidents starting from the selected location</string>
    <string name="pref_search_range_title">Search range</string>
    <string name="pref_notifications_summary">Select the severity level of incidents you would like to be notified about</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_auto_refresh_summary">Select time intervals between each two refresh operations</string>
    <string name="pref_auto_refresh_title">Auto refresh</string>

    <string name="pref_general_settings">General Settings</string>
    <string name="pref_notification_sync_settings">Refresh and Notification Settings</string>

    <string name="notification_content">Data updated. Traffic incidents detected</string>

    <string name="copyright">Copyright 2016 Iskander Gaba</string>
    <string name="license" translatable="false">Licensed under the Apache License, Version 2.0.</string>
    <string name="app_description">This app fetches and displays information about traffic incidents that are occurring nearby a selected area using Google Maps and Bing Traffic services.</string>
    <string name="bing_link" translatable="false"><a href='https://msdn.microsoft.com/en-us/library/jj136866'>Bing Maps Traffic Coverage</a></string>
    <string name="github_link" translatable="false"><a href='https://github.com/iskandergaba/Traffic-Incidents'>GitHub</a></string>

    <string name="location_address">Location address</string>
    <string name="show_on_map">Show on Map</string>
    <string name="share">Share</string>
    <string name="select_location">Tap to select a location</string>
    <string name="empty_list">No incidents found in the area</string>
    <string name="road_closed">Road closed</string>
    <string name="local_description">Local description</string>
    <string name="estimated_end_date">Estimated end date</string>
    <string name="severity">Severity</string>
    <string name="provided_by">Provided by</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="powered_by_bing">Powered by Bing</string>

    <string name="pref_search_range_key" translatable="false">prefSearchRange</string>
    <string name="pref_auto_refresh_key" translatable="false">prefAutoRefresh</string>
    <string name="pref_notifications_key" translatable="false">prefNotifications</string>
    <string name="title_activity_maps">Map</string>

</resources>