<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_general_settings" >

        <ListPreference
            android:key="@string/pref_search_range_key"
            android:entries="@array/searchRange"
            android:summary="@string/pref_search_range_summary"
            android:entryValues="@array/searchRangeValues"
            android:title="@string/pref_search_range_title"
            android:defaultValue="0.05" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_notification_sync_settings">

        <ListPreference
            android:key="@string/pref_auto_refresh_key"
            android:entries="@array/autoRefresh"
            android:entryValues="@array/autoRefreshValues"
            android:title="@string/pref_auto_refresh_title"
            android:summary="@string/pref_auto_refresh_summary"
            android:defaultValue="6"/>

        <ListPreference
            android:key="@string/pref_notifications_key"
            android:entries="@array/notificationsLevel"
            android:summary="@string/pref_notifications_summary"
            android:entryValues="@array/notificationsLevelValues"
            android:title="@string/pref_notifications_title"
            android:defaultValue="4"/>

    </PreferenceCategory>

</PreferenceScreen>